Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15784

Qt 4.7+ didn't correctly works at ARM platform

    XMLWordPrintable

Details

    Description

      Qt simple "hello world" application didn't correctly work on MOXA UC-8410.
      We get arm-linux cross-compiler from moxa site and build Qt library from source.
      Then we copy libQtCore.so from our computer to MOXA device and start our application, which should output just "Hello, world!", but instead of it we got:

      QString::arg: Argument missing: "/proc/%1/exe" ,
      4303 Qtig:r:Agmn isn:"po/1ee
      33 Qtig:r:Agmn isn:"po/1ee 33

      Qt version 4.7
      When we use Qt 4.5.1-4.6.3 all works fine.

      Configuration we use to compile Qt sources is:

      For 4.7.0, 4.7.1, 4.7.2:
      ./configure -prefix /opt/qt-arm -embedded arm -xplatform qws/linux-xscale-g++ -no-javascript-jit -no-script -no-multimedia -no-audio-backend -no-svg -no-webkit -qt-zlib -no-gif -no-libtiff -no-libpng -no-libmng -no-libjpeg -no-gui -no-nis -no-cups -no-gtkstyle -no-opengl -no-openvg -no-sm -no-xshape -no-xvideo -no-xsync -no-xinerama -no-xcursor -no-xfixes -no-xrandr -no-xrender -no-mitshm -no-fontconfig -no-xinput -no-xkb -no-glib

      For 4.6.3:
      ./configure -prefix /opt/qt-arm2 -embedded arm -xplatform qws/linux-xscale-g++ -no-javascript-jit -no-script -no-multimedia -no-audio-backend -no-svg -no-webkit -qt-zlib -no-gif -no-libtiff -no-libpng -no-libmng -no-libjpeg -no-nis -no-cups -no-gtkstyle -no-opengl -no-openvg -no-sm -no-xshape -no-phonon -no-xsync -no-xinerama -no-xcursor -no-xfixes -no-xrandr -no-xrender -no-mitshm -no-fontconfig -no-xinput -no-xkb -no-glib

      Test program:

      ======= main.cpp file ============
      #include <QtCore>

      int main (int argc,char **argv)
      {
      QCoreApplication a(argc,argv);

      qDebug() << "Hello world!";

      return a.exec();
      }
      ======= end of main.cpp file ============

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            rotozoom Pavel Ustinov
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes