QString doesn't work with old ABI on ARM.

QString doesn't work on ARM platform with old ABI because QChar has
wrong size. Macro Q_PACKED was removed by commit
1ec8acd77b6c048f5a68887ac7750b0764ade598. Some projects still use
old ABI. It is better to check version of ABI during compiling.

Task-number: QTBUG-15784

Change-Id: I92180b864679e01363fa837260707b67674d0a26
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>