src/corelib/tools/qlocale.h
@@ -786,7 +786,12 @@ public:
     struct Data {
         quint16 index;
         quint16 numberOptions;
-    };
+    }
+#if (defined(__arm__) || defined(QT_NO_ARM_EABI))
+    Q_PACKED
+#endif
+    ;
+
 private:
     friend struct QLocalePrivate;
     // ### We now use this field to pack an index into locale_data and NumberOptions.
